

<resources>
    <string name="app_name">Rest Reminder</string>

    <string name="facebook_application_id">1595854470451984</string>
    <string name="facebook_login_protocil_scheme">fb1595854470451984</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">mCai4tSZ8oCztnapwkNpEV8by</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">xwCKK99QFvmFbv7kcI20LkGE2eWQZUNpFqyTnBzyijyvPBKlWK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_plant">Plant</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="statistic">Statistic</string>
    <string name="plant">Plant</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="plantMainPic">Plant</string>
    <string name="statMainPic">Statistic</string>
    <string name="title_activity_notification_v2">NotificationV2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_nav">Reminder</string>
    <string name="daily_task">Daily Task</string>
    <string name="title_activity_reminder_v2">User Reminder</string>
    <string name="title_activity_tree">TreeActivity</string>

</resources>
