<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notificaion"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/statistic" />
        <item
            android:id="@+id/nav_plant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/plant" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
